padding when in mobile mode

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,7 +78,7 @@ body {
 div[role="wrapper"] {
 	background: rgba(255, 255, 255, 0.6);
 	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
-	padding: 1%;
+	padding: 15px;
 }
 
 p {
@@ -466,7 +466,6 @@ section[role="logo"] img {
 	@media only screen and (max-width: 768px) {
 		div[role="wrapper"] {
 			margin: 0;
-			padding: 0;
 			width: 100%;
 		}
 		
