--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
 		<article class="ten columns">
 			<h2 class="first-heading">About me</h2>
 			<img class="me" src="{{ url_for('static', filename='images/meh.png') }}" alt="Jérôme Mahuet">
-			<p>My name is <strong>Jérôme Mahuet</strong>, I am a twenty-five 
+			<p>My name is <strong>Jérôme Mahuet</strong>, I am a twenty-six 
 				year-old developer with sharp design sensibilities. I sit on the
 				 fence of both worlds. I’m the kind of guy who learns everything
 				  by himself, and each project is a way to push further my 
