--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
             <span class="ss-desktop"></span>
             <p>
                 <strong>Web Developer</strong><br>
-                <span class="text">Backend and frontend developer, I’m coding most of the time with <a href="http://www.python.org/">Python</a> or PHP. <a href="http://backbonejs.org/">Backbone</a> <em>&amp;</em> <a href="http://sass-lang.com/">SASS</a> are tools I use a lot when it comes to frontend development.</span>
+                <span class="text">Backend and frontend developer, I’m coding most of the time with <a href="http://www.python.org/">Python</a>, <a href="http://www.scala-lang.org/">Scala</a> or PHP. <a href="http://facebook.github.io/react/">React</a> <em>&amp;</em> <a href="http://sass-lang.com/">SASS</a> are tools I use a lot when it comes to frontend development.</span>
             </p>
         </section>
         <section class="column">
@@ -27,7 +27,7 @@
             <span class="ss-flask"></span>
             <p>
                 <strong>Self-taught</strong><br>
-                <span class="text">I’m always learning new stuff to stay up to date. I’m currently playing with <a href="http://www.haskell.org/haskellwiki/Haskell">Haskell</a> <em>&amp;</em> <a href="http://clojure.org/">Clojure</a> to learn functional programming and <a href="http://golang.org/">Go</a> to build concurrent programs.</span>
+                <span class="text">I’m always learning new stuff to stay up to date. I’m currently playing with <a href="https://www.haskell.org/">Haskell</a> <em>&amp;</em> <a href="http://clojure.org/">Clojure</a> to learn functional programming and <a href="http://golang.org/">Go</a> to build concurrent programs.</span>
             </p>
         </section>
     </div>
@@ -55,25 +55,16 @@
                     <span class="ss-star red"></span>
                     <span class="ss-star red"></span>
                     &nbsp;
-                    PHP
+                    Python / PHP
                 </li>
                 <li>
                     <span class="ss-star red"></span>
                     <span class="ss-star red"></span>
                     <span class="ss-star red"></span>
                     <span class="ss-star red"></span>
-                    <span class="ss-star red"></span>
-                    &nbsp;
-                    Python
-                </li>
-                <li>
-                    <span class="ss-star red"></span>
-                    <span class="ss-star red"></span>
-                    <span class="ss-star red"></span>
-                    <span class="ss-star"></span>
                     <span class="ss-star"></span>
                     &nbsp;
-                    Ruby
+                    Scala
                 </li>
                 <li>
                     <span class="ss-star red"></span>
@@ -82,7 +73,16 @@
                     <span class="ss-star"></span>
                     <span class="ss-star"></span>
                     &nbsp;
-                    Objective-C
+                    Objective-C / Clojure
+                </li>
+                <li>
+                    <span class="ss-star red"></span>
+                    <span class="ss-star red"></span>
+                    <span class="ss-star red"></span>
+                    <span class="ss-star"></span>
+                    <span class="ss-star"></span>
+                    &nbsp;
+                    Haskell
                 </li>
             </ul>
         </div>
@@ -96,7 +96,7 @@
                 <li><span class="ss-social ss-octocat"></span> <a href="http://github.com/Rydgel">github.com/Rydgel</a></li>
                 <li><span class="ss-social ss-facebook"></span> <a href="http://facebook.com/rydgel">facebook.com/rydgel</a></li>
                 <li><span class="ss-social ss-dribbble"></span> <a href="http://dribbble.com/phollow">dribbble.com/phollow</a></li>
-                <li><span class="ss-social ss-instagram"></span> <a href="http://statigr.am/rydgel">statigr.am/rydgel</a></li>
+                <li><span class="ss-social ss-instagram"></span> <a href="http://iconosquare.com/rydgel">iconosquare.com/rydgel</a></li>
             </ul>
         </div>
     </section>
