--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <title>{% block title %}{% endblock %}</title>
-    <meta name="description" content="My name is Jérôme Mahuet, I am a twenty-six year-old developer.">
+    <meta name="description" content="My name is Jérôme Mahuet, I am a twenty-seight year-old developer.">
     <meta name="author" content="Jérôme Mahuet">
     <meta name="google-site-verification" content="KPTwyDiLP2gAGP1U-jTyHS0qFUhCmEbPIjmiNlUF-zU">
     <meta name="viewport" content="width=device-width">
@@ -34,7 +34,7 @@
         </div>
         <div class="claim">
             <h1>Jérôme Mahuet</h1>
-            <p class="title">Web developer @ <a href="http://statigr.am">statigram</a></p>
+            <p class="title">Web developer @ <a href="http://iconosquare.com">iconosquare</a></p>
             <p class="contact"><a href="http://twitter.com/phollow">@phollow</a> / <a href="mailto:jerome.mahuet@gmail.com">jerome.mahuet@gmail.com</a></p>
         </div>
     </div>
@@ -44,7 +44,7 @@
 
 <footer>
     <div class="container">
-        Copyright © 2013 Jérôme Mahuet, built with love.
+        Copyright © 2015 Jérôme Mahuet, built with love.
     </div>
 </footer>
 
